# ms-timelag-comparison

./: .gitignore  CLAUDE.md  README.md  building-the-book.json  config.json  data.json  deploy.ps1  figure-gallery.json  index.html  index.json  merge-variants-and-flux-product.json  myst.search.json  myst.xref.json  myst.yml  notebooks.json  objects.inv  plot-fluxes.json  processing-steps.json  processing-versions.json  pyproject.toml  read-fluxes-to-parquet.json  site.json  sitemap.xml  subset-flux-columns.json  subset-flux-product-2024.json
building-the-book/: index.html
data/: index.html
data/00-eddypro_settings/: LGR-1_OPENLAG-10s_2021_2.metadata  LGR-3_CH-CHA_2021_2_2022_1_[LGR]_R350-B+IRGA75-A+LGR-A.metadata  QCL-1_OPENLAG-10s_2021_1.eddypro  QCL-1_OPENLAG-10s_2021_1.metadata  QCL-2R_DEFAULT-10s_2021_1.metadata  QCL-3_CH-CHA_2020_4+5_2021_1_[QCL]_R350-A+IRGA75-A+QCL-A.eddypro
data/00-pwb_tlag_summary/: LGR-4_detect_and_remove_tlag_summary.csv  QCL-4_detect_and_remove_tlag_summary.csv  (+1 more)
docs/: data.md  figure-gallery.md  intro.md  notebooks.md  processing-steps.md  processing-versions.md  references.bib  site.md
figure-gallery/: index.html
merge-variants-and-flux-product/: index.html
notebooks/: 01_read_fluxes_to_parquet.ipynb  02_subset_flux_columns.ipynb  03_plot_fluxes.ipynb  index.html
plot-fluxes/: index.html
processing-steps/: index.html
processing-versions/: index.html
read-fluxes-to-parquet/: index.html
site/: index.html
subset-flux-columns/: index.html
subset-flux-product-2024/: index.html
(+14 files in other folders)
