[project]
name = "dataset-ch-cha-flux-product"
version = "0.1.0"
description = "Dataset for grassland CH-CHA"
authors = [
    { name = "Lukas Hörtnagl", email = "lukas.hoertnagl@usys.ethz.ch" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jupyterlab>=4.3.5",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "diive",
    "ghp-import>=2.1.0",
    "rich>=13.0.0",
    "jupyter-book>=2.0.0",
]

[tool.uv.sources]
diive = { path = "../../diive", editable = true }

[tool.uv]
package = false
